charts/atuin/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: atuin
spec:
  template:
    spec:
      containers:
      - name: atuin
        image: ghcr.io/atuinsh/atuin:18.22.0
        args: [start]
        ports:
        - name: http
          containerPort: 8888
        volumeMounts:
        - name: postgres-cert
          mountPath: /pg
        - name: config
          mountPath: /config
      volumes:
      - name: postgres-cert
        secret:
          secretName: postgres-atuin
          defaultMode: 0640
      - name: config
        configMap:
          # Just an empty cm 
          name: settings
      securityContext:
        fsGroup: 1001
        runAsUser: 1001
