charts/atuin/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: atuin
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 80
    targetPort: 8888
