charts/atuin/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: atuin
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    acme.cert-manager.io/http01-edit-in-place: "true"
spec:
  ingressClassName: cilium
  rules:
  - host: atuin.sdg.moe
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: atuin
            port:
              number: 80
  tls:
  - hosts:
    - atuin.sdg.moe
    secretName: atuin-ssl
